# ephys-sorting-prototype

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
src/ephys_sorting_hat/: __main__.py  model.py
